--- a/package.json
+++ b/package.json
@@ -19,28 +19,28 @@
   },
   "dependencies": {
     "@astrojs/check": "^0.9.4",
-    "@astrojs/rss": "^4.0.11",
-    "@astrojs/vercel": "^8.1.4",
-    "@playform/compress": "^0.1.9",
-    "@unocss/preset-wind3": "^66.1.3",
-    "@unocss/reset": "^66.1.3",
-    "@waline/client": "^3.5.7",
-    "astro": "^5.8.1",
-    "astro-pure": "1.3.1",
+    "@astrojs/rss": "^4.0.12",
+    "@astrojs/vercel": "^8.2.6",
+    "@playform/compress": "^0.2.0",
+    "@unocss/preset-wind3": "^66.4.2",
+    "@unocss/reset": "^66.4.2",
+    "@waline/client": "^3.6.0",
+    "astro": "^5.13.2",
+    "astro-pure": "^1.3.2",
     "katex": "^0.16.22",
     "rehype-katex": "^7.0.1",
     "remark-math": "^6.0.0",
-    "sharp": "^0.34.2",
-    "typescript": "^5.8.3"
+    "sharp": "^0.34.3",
+    "typescript": "^5.9.2"
   },
   "devDependencies": {
-    "@eslint/js": "^9.28.0",
-    "@ianvs/prettier-plugin-sort-imports": "^4.4.2",
-    "eslint": "^9.28.0",
+    "@eslint/js": "^9.33.0",
+    "@ianvs/prettier-plugin-sort-imports": "^4.6.2",
+    "eslint": "^9.33.0",
     "eslint-plugin-astro": "^1.3.1",
-    "prettier": "^3.5.3",
+    "prettier": "^3.6.2",
     "prettier-plugin-astro": "^0.14.1",
-    "rollup-plugin-visualizer": "^6.0.1",
-    "typescript-eslint": "^8.33.0"
+    "rollup-plugin-visualizer": "^6.0.3",
+    "typescript-eslint": "^8.39.1"
   }
 }
