--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "astro": "^5.13.2",
     "astro-pure": "^1.3.2",
     "katex": "^0.16.22",
+    "rehype-external-links": "^3.0.0",
     "rehype-katex": "^7.0.1",
     "remark-math": "^6.0.0",
     "sharp": "^0.34.3",
