--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "dependencies": {
     "@astrojs/check": "^0.9.4",
     "@astrojs/rss": "^4.0.12",
+    "@astrojs/sitemap": "^3.5.0",
     "@astrojs/vercel": "^8.2.6",
     "@playform/compress": "^0.2.0",
     "@unocss/preset-wind3": "^66.4.2",
